# agent-control-plane

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  setup_lakebase_tables.py
control-plane-app/: .databricksignore  .env.example  .gitignore  README.md  app.yaml  deploy.sh  grant_sp_lakebase.py  grant_sp_permissions.py  package-lock.json  package.json  playwright.config.ts  propagate-sp.sh  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
control-plane-app/backend/: config.py  database.py  main.py
control-plane-app/backend/api/: access.py  admin.py  agents.py  analytics.py  billing.py  gateway.py  gateway_logs.py  health.py  kpis.py  mlflow.py  operations.py  playground.py  requests.py  tools.py  topology.py  user_analytics.py  vector_search.py  websocket.py  workspaces.py
control-plane-app/backend/models/: agent.py  analytics.py  gateway.py  kpi.py  request.py
control-plane-app/backend/services/: __init__.py  access_service.py  agent_permissions_cache.py  agent_service.py  analytics_service.py  billing_service.py  discovery_service.py  gateway_logs_service.py  gateway_service.py  mlflow_service.py  operations_service.py  playground_service.py  query_service.py  tools_service.py  topology_service.py  vector_search_service.py  workspace_registry.py  workspace_service.py
control-plane-app/backend/utils/: auth.py  formatting.py
control-plane-app/frontend/: index.html
control-plane-app/tests/: README-WORKSPACE-FILTER-TEST.md  auth.setup.ts  governance-workspace-filter.spec.ts
(+66 files in other folders)
