[project]
name = "control-plane-app"
version = "0.1.0"
description = "AI Agent Control Plane - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "databricks-sdk>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/services/discovery_service.py"]  # 1747 lines, tested via integration

[tool.coverage.report]
show_missing = true
fail_under = 25

[tool.ruff]
select = ["E", "F", "W"]
ignore = ["E501", "E402"]  # line length, import order
exclude = ["__pycache__", ".venv", "dist"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
